--- a/CybersportTournament/RegistrationWindow.xaml
+++ b/CybersportTournament/RegistrationWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CybersportTournament"
         mc:Ignorable="d"
-        Title="Регистрация" Height="450" Width="550" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
+        Title="Регистрация" Height="400" Width="550" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid.Background>
             <RadialGradientBrush MappingMode="RelativeToBoundingBox" GradientOrigin="0.9,0.2" Center="0.5,0.5" RadiusX="0.7" RadiusY="0.7">
@@ -13,23 +13,25 @@
                 <GradientStop Color="#FF142F2C"/>
             </RadialGradientBrush>
         </Grid.Background>
-        <Border x:Name="RegistrationBorder" CornerRadius="15" BorderBrush="Black" VerticalAlignment="Top" HorizontalAlignment="Left" Height="30" Width="130" Margin="313,306,0,0" Background="#FF3DBDA8">
+        <Border x:Name="RegistrationBorder" CornerRadius="15" BorderBrush="Black" VerticalAlignment="Top" HorizontalAlignment="Left" Height="30" Width="130" Margin="313,262,0,0" Background="#FF3DBDA8">
             <Button x:Name="RegistrationButton" Content="Зарегестрироваться" Background="{Binding ElementName=RegistrationBorder}" BorderThickness="0" Width="Auto" 
                 Height="Auto" Margin="4.5, 4.5, 4.5, 4.5" Click="RegistrationClick"/>
         </Border>
-        <Border x:Name="BackBorder" CornerRadius="15" BorderBrush="Black" VerticalAlignment="Top" HorizontalAlignment="Left" Height="30" Width="130" Margin="107,306,0,0" Background="#FF3DBDA8">
+        <Border x:Name="BackBorder" CornerRadius="15" BorderBrush="Black" VerticalAlignment="Top" HorizontalAlignment="Left" Height="30" Width="130" Margin="107,262,0,0" Background="#FF3DBDA8">
             <Button x:Name="BackButton" Content="Назад" Background="{Binding ElementName=BackBorder}" BorderThickness="0" Width="Auto" 
                 Height="Auto" Margin="4.5, 4.5, 4.5, 4.5" Click="BackClick" />
         </Border>
-        <TextBox Name="Login" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="112,95,0,0" Height="20" Width="120" Background="White"/>
-        <Label Content="Логин" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="112,65,0,0" Foreground="White" Height="30" Width="120"/>
-        <PasswordBox Name="Password" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="112,162,0,0" Height="20" Width="120"/>
-        <Label Content="Пароль" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="112,132,0,0" Foreground="White" Height="30" Width="120"/>
-        <TextBox Name="SecondName" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="318,95,0,0" Height="20" Width="120" Background="White"/>
-        <Label Content="Фамилия" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="318,66,0,0" Foreground="White" Height="30" Width="120"/>
-        <TextBox Name="FirstName" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="318,162,0,0" Height="20" Width="120" Background="White"/>
-        <Label Content="Имя" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="318,132,0,0" Foreground="White" Height="30" Width="120"/>
-        <TextBox Name="MiddleName" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="215,241,0,0" Height="20" Width="120" Background="White"/>
-        <Label Content="Отчество" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="215,211,0,0" Foreground="White" Height="30" Width="120"/>
+        <TextBox Name="Login" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="112,69,0,0" Height="20" Width="120" Background="White"/>
+        <Label Content="Логин" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="112,39,0,0" Foreground="White" Height="30" Width="120"/>
+        <PasswordBox Name="Password" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="112,136,0,0" Height="20" Width="120"/>
+        <Label Content="Пароль" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="112,106,0,0" Foreground="White" Height="30" Width="120"/>
+        <TextBox Name="SecondName" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="318,69,0,0" Height="20" Width="120" Background="White"/>
+        <Label Content="Фамилия" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="318,40,0,0" Foreground="White" Height="30" Width="120"/>
+        <TextBox Name="FirstName" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="318,136,0,0" Height="20" Width="120" Background="White"/>
+        <Label Content="Имя" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="318,106,0,0" Foreground="White" Height="30" Width="120"/>
+        <TextBox Name="MiddleName" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="112,203,0,0" Height="20" Width="120" Background="White"/>
+        <Label Content="Отчество" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="112,171,0,0" Foreground="White" Height="30" Width="120"/>
+        <TextBox Name="Email" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="318,203,0,0" Height="20" Width="120" Background="White"/>
+        <Label Content="Почта" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="318,171,0,0" Foreground="White" Height="30" Width="120"/>
     </Grid>
 </Window>
