--- a/CybersportTournament/ErrorWindow.xaml
+++ b/CybersportTournament/ErrorWindow.xaml
@@ -1,16 +1,16 @@
-﻿<Window x:Class="CybersportTournament.RegitrationConfirmedWindow"
+﻿<Window x:Class="CybersportTournament.ErrorWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CybersportTournament"
         mc:Ignorable="d"
-        Title="RegitrationConfirmedWindow" Height="100" Width="175" WindowStartupLocation="CenterScreen" WindowStyle="None" ResizeMode="NoResize">
+        Title="ErrorWindow" Height="100" Width="300" WindowStartupLocation="CenterScreen" WindowStyle="None" ResizeMode="NoResize">
     <Grid Background="#FF2D2D2D">
         <Border x:Name="BackBorder" CornerRadius="15" BorderBrush="Black" VerticalAlignment="Top" HorizontalAlignment="Center" Height="30" Width="130" Margin="0,57,0,0" Background="#FF4F5856">
             <Button x:Name="BackButton" Content="Назад" Background="{Binding ElementName=BackBorder}" BorderThickness="0" Width="Auto" 
                 Height="Auto" Margin="4.5, 4.5, 4.5, 4.5" Click="BackClick"/>
         </Border>
-        <Label Content="Вы зарегестрировались" HorizontalAlignment="Center" Margin="0,18,0,0" VerticalAlignment="Top" Height="29" Width="140" Foreground="White"/>
+        <Label Name="Error" Content="Ошибка: " HorizontalAlignment="Center" Margin="0,18,0,0" VerticalAlignment="Top" Height="29" Width="262" Foreground="White"/>
     </Grid>
 </Window>
