--- a/CybersportTournament/App.xaml
+++ b/CybersportTournament/App.xaml
@@ -3,7 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:CybersportTournament"
              StartupUri="AuthorizationWindow.xaml">
+
     <Application.Resources>
-         
+        <ResourceDictionary Source="Styles/Style.xaml"/>
     </Application.Resources>
 </Application>
