--- a/CybersportTournament/AuthorizationWindow.xaml
+++ b/CybersportTournament/AuthorizationWindow.xaml
@@ -7,23 +7,13 @@
         mc:Ignorable="d"
         Title="Авторизация" Height="300" Width="250" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
     <Grid>
-        <Grid.Background>
-            <RadialGradientBrush MappingMode="RelativeToBoundingBox" GradientOrigin="0.9,0.2" Center="0.5,0.5" RadiusX="0.7" RadiusY="0.7">
-                <GradientStop Color="#FF1B1B15" Offset="1"/>
-                <GradientStop Color="#FF142F2C"/>
-            </RadialGradientBrush>
-        </Grid.Background>
-        <Border Name="AuthorizeBorder" CornerRadius="15" BorderBrush="Black" VerticalAlignment="Top" HorizontalAlignment="Center" Height="30" Width="130" Margin="0,153,0,0" Background="#FF4F5856">
-            <Button Name="AuthorizeButton" Content="Войти" Background="{Binding ElementName=AuthorizeBorder}" BorderThickness="0" Width="Auto" 
-                    Height="Auto" Margin="4.5, 4.5, 4.5, 4.5" Click="AuthorizationClick"/>
-        </Border>
-        <Border x:Name="RegistrationBorder" CornerRadius="15" BorderBrush="Black" VerticalAlignment="Top" HorizontalAlignment="Center" Height="30" Width="130" Margin="0,202,0,0" Background="#FF4F5856">
-            <Button x:Name="RegistrationButton" Content="Зарегестрироваться" Background="{Binding ElementName=RegistrationBorder}" BorderThickness="0" Width="Auto" 
-                Height="Auto" Margin="4.5, 4.5, 4.5, 4.5" Click="RegistrationClick"/>
-        </Border>
+        <Button Name="AuthorizeButton" Content="Войти" VerticalAlignment="Top" HorizontalAlignment="Center"
+                   Height="30" Width="130" Margin="0,153,0,0" Click="AuthorizationClick"/>
+        <Button x:Name="RegistrationButton" Content="Зарегестрироваться" VerticalAlignment="Top" HorizontalAlignment="Center" 
+                   Height="30" Width="130" Margin="0,202,0,0" Click="RegistrationClick"/>
         <TextBox Name="Login" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="0,55,0,0" Height="20" Width="120" Background="White"/>
+        <Label Name="LoginLab"  Content="Логин" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="0,25,0,0" Foreground="White" Height="30" Width="120"/>
         <PasswordBox Name="Password" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="0,115,0,0" Height="20" Width="120"/>
-        <Label Content="Логин" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="0,25,0,0" Foreground="White" Height="30" Width="120"/>
         <Label Content="Пароль" VerticalAlignment="Top" HorizontalAlignment="Center" Foreground="White" Margin="0,85,0,0" Height="30" Width="120"/>
     </Grid>
 </Window>
