--- a/CybersportTournament/RegistrationWindow.xaml
+++ b/CybersportTournament/RegistrationWindow.xaml
@@ -7,20 +7,10 @@
         mc:Ignorable="d"
         Title="Регистрация" Height="400" Width="550" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <Grid>
-        <Grid.Background>
-            <RadialGradientBrush MappingMode="RelativeToBoundingBox" GradientOrigin="0.9,0.2" Center="0.5,0.5" RadiusX="0.7" RadiusY="0.7">
-                <GradientStop Color="#FF1B1B15" Offset="1"/>
-                <GradientStop Color="#FF142F2C"/>
-            </RadialGradientBrush>
-        </Grid.Background>
-        <Border x:Name="RegistrationBorder" CornerRadius="15" BorderBrush="Black" VerticalAlignment="Top" HorizontalAlignment="Left" Height="30" Width="130" Margin="313,262,0,0" Background="#FF4F5856">
-            <Button x:Name="RegistrationButton" Content="Зарегестрироваться" Background="{Binding ElementName=RegistrationBorder}" BorderThickness="0" Width="Auto" 
-                Height="Auto" Margin="4.5, 4.5, 4.5, 4.5" Click="RegistrationClick"/>
-        </Border>
-        <Border x:Name="BackBorder" CornerRadius="15" BorderBrush="Black" VerticalAlignment="Top" HorizontalAlignment="Left" Height="30" Width="130" Margin="107,262,0,0" Background="#FF4F5856">
-            <Button x:Name="BackButton" Content="Назад" Background="{Binding ElementName=BackBorder}" BorderThickness="0" Width="Auto" 
-                Height="Auto" Margin="4.5, 4.5, 4.5, 4.5" Click="BackClick" />
-        </Border>
+        <Button x:Name="RegistrationButton" Content="Зарегестрироваться" VerticalAlignment="Top" HorizontalAlignment="Left" 
+                Height="30" Width="130" Margin="313,262,0,0" Click="RegistrationClick"/>
+        <Button x:Name="BackButton" Content="Назад" VerticalAlignment="Top" HorizontalAlignment="Left" 
+                Height="30" Width="130" Margin="107,262,0,0" Click="BackClick" />
         <TextBox Name="Login" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="112,69,0,0" Height="20" Width="120" Background="White"/>
         <Label Content="Логин" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="112,40,0,0" Foreground="White" Height="30" Width="120"/>
         <PasswordBox Name="Password" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="318,69,0,0" Height="20" Width="120"/>
