--- a/CybersportTournament/AddPlayerWindow.xaml
+++ b/CybersportTournament/AddPlayerWindow.xaml
@@ -7,19 +7,21 @@
         mc:Ignorable="d"
         Title="Добавление игрока" Height="900" Width="1600" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
     <Grid>
-        <Label Content="Фамилия:" HorizontalAlignment="Left" Margin="165,146,0,0" VerticalAlignment="Top" Height="60" Width="180" Foreground="White" FontSize="36"/>
-        <TextBox Name="SecondName" HorizontalAlignment="Left" Margin="345,146,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Height="60" Width="350" FontSize="36"/>
-        <Label Content="Имя:" HorizontalAlignment="Left" Margin="165,228,0,0" VerticalAlignment="Top" Height="60" Width="180" Foreground="White" FontSize="36"/>
-        <TextBox Name="FirstName" HorizontalAlignment="Left" Margin="345,228,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Height="60" Width="350" FontSize="36"/>
-        <Label Content="Отчество:" HorizontalAlignment="Left" Margin="165,310,0,0" VerticalAlignment="Top" Height="60" Width="180" Foreground="White" FontSize="36"/>
-        <TextBox Name="MiddleName" HorizontalAlignment="Left" Margin="345,310,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Height="60" Width="350" FontSize="36"/>
-        <Label Content="Почта:" HorizontalAlignment="Left" Margin="165,392,0,0" VerticalAlignment="Top" Height="60" Width="180" Foreground="White" FontSize="36"/>
-        <TextBox Name="Email" HorizontalAlignment="Left" Margin="345,392,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Height="60" Width="350" FontSize="36"/>
-        <Label Content="Ник:" HorizontalAlignment="Left" Margin="165,474,0,0" VerticalAlignment="Top" Height="60" Width="180" Foreground="White" FontSize="36"/>
-        <TextBox x:Name="Nickname" HorizontalAlignment="Left" Margin="345,474,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Height="60" Width="350" FontSize="36"/>
-        <Label Content="Фото:" HorizontalAlignment="Left" Margin="165,556,0,0" VerticalAlignment="Top" Height="61" Width="162" Foreground="White" FontSize="36"/>
-        <Button Name="SelectButton" Content="Выбрать" HorizontalAlignment="Left" Margin="345,556,0,0" VerticalAlignment="Top" Height="60" Width="180" FontSize="36" Click="SelectButtonClick"/>
-        <Image Name="Photo" HorizontalAlignment="Left" Height="400" Margin="982,250,0,0" VerticalAlignment="Top"  Width="500"/>
+        <Label Content="Фамилия:" HorizontalAlignment="Left" Margin="127,142,0,0" VerticalAlignment="Top" Height="60" Width="180" Foreground="White" FontSize="36"/>
+        <TextBox Name="SecondName" HorizontalAlignment="Left" Margin="307,142,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Height="60" Width="550" FontSize="36"/>
+        <Label Content="Имя:" HorizontalAlignment="Left" Margin="127,224,0,0" VerticalAlignment="Top" Height="60" Width="180" Foreground="White" FontSize="36"/>
+        <TextBox Name="FirstName" HorizontalAlignment="Left" Margin="307,224,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Height="60" Width="550" FontSize="36"/>
+        <Label Content="Отчество:" HorizontalAlignment="Left" Margin="127,306,0,0" VerticalAlignment="Top" Height="60" Width="180" Foreground="White" FontSize="36"/>
+        <TextBox Name="MiddleName" HorizontalAlignment="Left" Margin="307,306,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Height="60" Width="550" FontSize="36"/>
+        <Label Content="Почта:" HorizontalAlignment="Left" Margin="127,388,0,0" VerticalAlignment="Top" Height="60" Width="180" Foreground="White" FontSize="36"/>
+        <TextBox Name="Email" HorizontalAlignment="Left" Margin="307,388,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Height="60" Width="550" FontSize="36"/>
+        <Label Content="Ник:" HorizontalAlignment="Left" Margin="127,470,0,0" VerticalAlignment="Top" Height="60" Width="180" Foreground="White" FontSize="36"/>
+        <TextBox x:Name="Nickname" HorizontalAlignment="Left" Margin="307,470,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Height="60" Width="550" FontSize="36"/>
+        <Label Content="Команда:" HorizontalAlignment="Left" Margin="127,552,0,0" VerticalAlignment="Top" Height="60" Width="180" Foreground="White" FontSize="36"/>
+        <ComboBox Name="TeamsBox" HorizontalAlignment="Left" Margin="307,552,0,0" VerticalAlignment="Top" Height="60" Width="550" FontSize="36"/>
+        <Label Content="Фото:" HorizontalAlignment="Left" Margin="127,634,0,0" VerticalAlignment="Top" Height="61" Width="162" Foreground="White" FontSize="36"/>
+        <Button Name="SelectButton" Content="Выбрать" HorizontalAlignment="Left" Margin="307,634,0,0" VerticalAlignment="Top" Height="60" Width="180" FontSize="36" Click="SelectButtonClick"/>
+        <Image Name="Photo" HorizontalAlignment="Left" Height="500" Margin="1000,170,0,0" VerticalAlignment="Top"  Width="500"/>
         <Button Name="BackButton"  Content="Назад" HorizontalAlignment="Left" Margin="20,17,0,0" VerticalAlignment="Top" Height="39" Width="140" FontSize="25" Click="BackButtonClick"/>
         <Button Name="AddButton" Content="Добавить" HorizontalAlignment="Center" Margin="0,746,0,0" VerticalAlignment="Top" Height="60" Width="180" FontSize="36" Click="AddButtonClick" />
     </Grid>
