--- a/CybersportTournament/MainWindow.xaml
+++ b/CybersportTournament/MainWindow.xaml
@@ -13,8 +13,10 @@
             </TabItem>
             <TabItem Name="AddItem" Header="Добавить" Height="20" Width="100" Background="#FF4F5856">
                 <Grid Margin="-3,-22,-3,-2">
-                    <Button Name="AddTeam"  Content="Команду" HorizontalAlignment="Left" Margin="158,156,0,0" VerticalAlignment="Top" Height="70" Width="177" Click="AddTeamClick" FontSize="36"/>
-                    <Button Name="AddPlayer"  Content="Игрока" HorizontalAlignment="Left" Margin="158,248,0,0" VerticalAlignment="Top" Height="70" Width="177" FontSize="36" Click="AddPlayerClick"/>
+                    <Button Name="AddTeam" Content="Команду" HorizontalAlignment="Left" Margin="158,156,0,0" VerticalAlignment="Top" Height="70" Width="177" Click="AddTeamClick" FontSize="36"/>
+                    <Button Name="AddPlayer" Content="Игрока" HorizontalAlignment="Left" Margin="158,248,0,0" VerticalAlignment="Top" Height="70" Width="177" FontSize="36" Click="AddPlayerClick"/>
+                    <Button Name="AddGame" Content="Игру" HorizontalAlignment="Left" Margin="158,340,0,0" VerticalAlignment="Top" Height="70" Width="177" FontSize="36" Click="AddGameClick"/>
+                    <Button Name="AddMap" Content="Карту" HorizontalAlignment="Left" Margin="158,432,0,0" VerticalAlignment="Top" Height="70" Width="177" FontSize="36" Click="AddMapClick"/>
                 </Grid>
             </TabItem>
         </TabControl>
