--- a/CybersportTournament/MainWindow.xaml
+++ b/CybersportTournament/MainWindow.xaml
@@ -18,6 +18,7 @@
                     <Button Name="AddGame" Content="Игру" HorizontalAlignment="Left" Margin="158,340,0,0" VerticalAlignment="Top" Height="70" Width="177" FontSize="36" Click="AddGameClick"/>
                     <Button Name="AddMap" Content="Карту" HorizontalAlignment="Left" Margin="158,432,0,0" VerticalAlignment="Top" Height="70" Width="177" FontSize="36" Click="AddMapClick"/>
                     <Button Name="AddTournament" Content="Турнир" HorizontalAlignment="Left" Margin="158,524,0,0" VerticalAlignment="Top" Height="70" Width="177" FontSize="36" Click="AddTournamentClick"/>
+                    <Button Name="AddMatch" Content="Матч" HorizontalAlignment="Left" Margin="158,616,0,0" VerticalAlignment="Top" Height="70" Width="177" FontSize="36" Click="AddMatchClick"/>
                 </Grid>
             </TabItem>
         </TabControl>
