--- a/CybersportTournament/MainWindow.xaml
+++ b/CybersportTournament/MainWindow.xaml
@@ -13,12 +13,13 @@
             </TabItem>
             <TabItem Name="AddItem" Header="Добавить" Height="20" Width="100" Background="#FF4F5856">
                 <Grid Margin="-3,-22,-3,-2">
-                    <Button Name="AddTeam" Content="Команду" HorizontalAlignment="Left" Margin="158,156,0,0" VerticalAlignment="Top" Height="70" Width="177" Click="AddTeamClick" FontSize="36"/>
-                    <Button Name="AddPlayer" Content="Игрока" HorizontalAlignment="Left" Margin="158,248,0,0" VerticalAlignment="Top" Height="70" Width="177" FontSize="36" Click="AddPlayerClick"/>
-                    <Button Name="AddGame" Content="Игру" HorizontalAlignment="Left" Margin="158,340,0,0" VerticalAlignment="Top" Height="70" Width="177" FontSize="36" Click="AddGameClick"/>
-                    <Button Name="AddMap" Content="Карту" HorizontalAlignment="Left" Margin="158,432,0,0" VerticalAlignment="Top" Height="70" Width="177" FontSize="36" Click="AddMapClick"/>
-                    <Button Name="AddTournament" Content="Турнир" HorizontalAlignment="Left" Margin="158,524,0,0" VerticalAlignment="Top" Height="70" Width="177" FontSize="36" Click="AddTournamentClick"/>
-                    <Button Name="AddMatch" Content="Матч" HorizontalAlignment="Left" Margin="158,616,0,0" VerticalAlignment="Top" Height="70" Width="177" FontSize="36" Click="AddMatchClick"/>
+                    <Button Name="AddTeam" Content="Команду" HorizontalAlignment="Left" Margin="158,130,0,0" VerticalAlignment="Top" Height="70" Width="177" Click="AddTeamClick" FontSize="36"/>
+                    <Button Name="AddPlayer" Content="Игрока" HorizontalAlignment="Left" Margin="158,222,0,0" VerticalAlignment="Top" Height="70" Width="177" FontSize="36" Click="AddPlayerClick"/>
+                    <Button Name="AddGame" Content="Игру" HorizontalAlignment="Left" Margin="158,314,0,0" VerticalAlignment="Top" Height="70" Width="177" FontSize="36" Click="AddGameClick"/>
+                    <Button Name="AddMap" Content="Карту" HorizontalAlignment="Left" Margin="158,406,0,0" VerticalAlignment="Top" Height="70" Width="177" FontSize="36" Click="AddMapClick"/>
+                    <Button Name="AddTournament" Content="Турнир" HorizontalAlignment="Left" Margin="158,498,0,0" VerticalAlignment="Top" Height="70" Width="177" FontSize="36" Click="AddTournamentClick"/>
+                    <Button Name="AddMatch" Content="Матч" HorizontalAlignment="Left" Margin="158,590,0,0" VerticalAlignment="Top" Height="70" Width="177" FontSize="36" Click="AddMatchClick"/>
+                    <Button Name="AddRound" Content="Раунд" HorizontalAlignment="Left" Margin="158,682,0,0" VerticalAlignment="Top" Height="70" Width="177" FontSize="36" Click="AddRoundClick"/>
                 </Grid>
             </TabItem>
         </TabControl>
