--- a/CybersportTournament/RegistrationWindow.xaml
+++ b/CybersportTournament/RegistrationWindow.xaml
@@ -5,23 +5,21 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CybersportTournament"
         mc:Ignorable="d"
-        Title="Регистрация" Height="400" Width="550" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
+        Title="Регистрация" Height="900" Width="1600" ResizeMode="CanMinimize" WindowStartupLocation="CenterScreen">
     <Grid>
-        <Button x:Name="RegistrationButton" Content="Зарегестрироваться" VerticalAlignment="Top" HorizontalAlignment="Left" 
-                Height="30" Width="130" Margin="313,262,0,0" Click="RegistrationClick"/>
-        <Button x:Name="BackButton" Content="Назад" VerticalAlignment="Top" HorizontalAlignment="Left" 
-                Height="30" Width="130" Margin="107,262,0,0" Click="BackClick" />
-        <TextBox Name="Login" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="112,69,0,0" Height="20" Width="120" Background="White"/>
-        <Label Content="Логин" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="112,40,0,0" Foreground="White" Height="30" Width="120"/>
-        <PasswordBox Name="Password" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="318,69,0,0" Height="20" Width="120"/>
-        <Label Content="Пароль" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="318,40,0,0" Foreground="White" Height="30" Width="120"/>
-        <TextBox Name="SecondName" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="112,136,0,0" Height="20" Width="120" Background="White"/>
-        <Label Content="Фамилия" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="112,106,0,0" Foreground="White" Height="30" Width="120"/>
-        <TextBox Name="FirstName" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="318,136,0,0" Height="20" Width="120" Background="White"/>
-        <Label Content="Имя" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="318,106,0,0" Foreground="White" Height="30" Width="120"/>
-        <TextBox Name="MiddleName" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="112,203,0,0" Height="20" Width="120" Background="White"/>
-        <Label Content="Отчество" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="112,171,0,0" Foreground="White" Height="30" Width="120"/>
-        <TextBox Name="Email" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="318,203,0,0" Height="20" Width="120" Background="White"/>
-        <Label Content="Почта" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="318,171,0,0" Foreground="White" Height="30" Width="120"/>
+        <Label Content="Логин:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="125,172,0,0" Foreground="White" Height="60" Width="180" FontSize="36"/>
+        <TextBox Name="Login" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="125,232,0,0" Height="60" Width="550" Background="White" FontSize="36"/>
+        <Label Content="Пароль:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="925,172,0,0" Foreground="White" Height="60" Width="180" FontSize="36"/>
+        <PasswordBox Name="Password" VerticalAlignment="Top" Margin="925,232,0,0" Height="60" FontSize="36" HorizontalAlignment="Left" Width="550"/>
+        <Label Content="Фамилия:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="125,314,0,0" Foreground="White" Height="60" Width="180" FontSize="36"/>
+        <TextBox Name="SecondName" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="125,374,0,0" Height="60" Width="550" Background="White" FontSize="36"/>
+        <Label Content="Имя:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="925,314,0,0" Foreground="White" Height="60" Width="180" FontSize="36"/>
+        <TextBox Name="FirstName" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="925,374,0,0" Height="60" Width="550" Background="White" FontSize="36"/>
+        <Label Content="Отчество:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="125,456,0,0" Foreground="White" Height="60" Width="180" FontSize="36"/>
+        <TextBox Name="MiddleName" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="125,516,0,0" Height="60" Width="550" Background="White" FontSize="36"/>
+        <Label Content="Почта:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="925,456,0,0" Foreground="White" Height="60" Width="180" FontSize="36"/>
+        <TextBox Name="Email" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="925,516,0,0" Height="60" Width="550" Background="White" FontSize="36"/>
+        <Button Name="BackButton" Content="Назад" VerticalAlignment="Top" HorizontalAlignment="Left" Height="60" Width="360" Margin="350,746,0,0" Click="BackClick" FontSize="36"/>
+        <Button Name="RegistrationButton" Content="Зарегестрироваться" VerticalAlignment="Top" HorizontalAlignment="Right" Height="60" Width="360" Margin="0,746,350,0" FontSize="36" Click="RegistrationClick"/>
     </Grid>
 </Window>
