--- a/CybersportTournament/Styles/Style.xaml
+++ b/CybersportTournament/Styles/Style.xaml
@@ -39,4 +39,23 @@
         </Setter>
         <Setter Property="Background" Value="{Binding ElementName=Border}"/>
     </Style>
+
+    <Style TargetType="DataGrid">
+        <Setter Property="FontSize" Value="20"/>
+        
+
+        <Setter Property="Foreground" Value="White"/>
+        <Setter Property="RowBackground" Value="Transparent"/>
+        <Setter Property="BorderBrush" Value="Transparent"/>
+        <Setter Property="Background" Value="Transparent"/>
+    </Style>
+
+    <Style x:Key="ColumnHeaderStyle" TargetType="{x:Type DataGridColumnHeader}">
+        <Setter Property="Background" Value="Transparent" />
+        <Setter Property="FontWeight" Value="Bold"/>
+    </Style>
+
+    <Style x:Key="RowHeaderStyle" TargetType="{x:Type DataGridRowHeader}">
+        <Setter Property="Background" Value="Transparent" />
+    </Style>
 </ResourceDictionary>
