--- a/CybersportTournament/AddWindows/AddPlayerWindow.xaml
+++ b/CybersportTournament/AddWindows/AddPlayerWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="CybersportTournament.AddPlayerWindow"
+﻿<Window x:Class="CybersportTournament.AddWindows.AddPlayerWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
