--- a/CybersportTournament/AddWindows/AddRoundWindow.xaml
+++ b/CybersportTournament/AddWindows/AddRoundWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="CybersportTournament.AddRoundWindow"
+﻿<Window x:Class="CybersportTournament.AddWindows.AddRoundWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
