--- a/CybersportTournament/ListWindows/PlayersListWindow.xaml
+++ b/CybersportTournament/ListWindows/PlayersListWindow.xaml
@@ -10,6 +10,11 @@
         <Button Name="BackButton"  Content="Назад" HorizontalAlignment="Left" Margin="20,17,0,0" VerticalAlignment="Top" Height="39" Width="140" FontSize="25" Click="BackButtonClick"/>
         <DataGrid Name="PlayersList" AutoGenerateColumns="False" Height="600" Margin="0,158,0,0" VerticalAlignment="Top" HorizontalAlignment="Center" Width="1340"
                    RowHeaderStyle="{StaticResource RowHeaderStyle}" ColumnHeaderStyle="{StaticResource ColumnHeaderStyle}">
+            <DataGrid.ItemContainerStyle>
+                <Style TargetType="DataGridRow">
+                    <EventSetter Event="MouseDoubleClick" Handler="PlayersListMouseDoubleClick"/>
+                </Style>
+            </DataGrid.ItemContainerStyle>
             <DataGrid.Columns>
                 <DataGridTextColumn Binding="{Binding FirstName}" Header="FirstName" Width="200" IsReadOnly="True"/>
                 <DataGridTextColumn Binding="{Binding SecondName}" Header="SecondName"  Width="200" IsReadOnly="True"/>
